<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcontactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contacto"
        />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcorreos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Correo"

            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mensaje"

            />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewuno"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>